--- a/src/app/components/i18n/commons/fr.json
+++ b/src/app/components/i18n/commons/fr.json
@@ -61,6 +61,9 @@
       "read-more": "En savoir plus",
       "subscribe": "Souscrire"
     },
+    "legals" : {
+      "gcu": "Accèpter les <a href=\"#/legal-agreement\" target=\"_blank\">CGU</a> et la <a href=\"#/privacy-policy\" target=\"_blank\">politique de respect de la vie privée</a>"
+    },
     "settings": {
       "activity": {
         "archery": "Tir à l'arc",
