bug fix pricing

--- a/src/app/components/i18n/public/en.json
+++ b/src/app/components/i18n/public/en.json
@@ -162,7 +162,7 @@
         "features": "Analyser les performances, match après match, de vos joueurs, de vos équipes."
       },
       "TEAMXL": {
-        "title": "Team M",
+        "title": "Team XL",
         "desc": "11 utilisateurs et plus",
         "features": "Partager votre espace de travail avec vos collègues."
       }
