--- a/src/app/components/i18n/stats/fr.json
+++ b/src/app/components/i18n/stats/fr.json
@@ -135,7 +135,7 @@
       "shootAtt": "Tir",
       "shootDef": "Tir adverse",
       "goalScored": "But marqué",
-      "goalconceded": "But encaissé",
+      "goalConceded": "But encaissé",
       "stopOk": "Tir arreté",
       "impactShootAtt": "Impact de tir",
       "impactShootDef": "Impact de tir",
