Correction divers petits bug

--- a/src/app/components/i18n/commons/en.json
+++ b/src/app/components/i18n/commons/en.json
@@ -62,7 +62,8 @@
       "accept": "Accept",
       "refuse": "Refuse",
       "read-more": "Learn more",
-      "subscribe": "Subscribe"
+      "subscribe": "Subscribe",
+      "search": "Search"   
     },
     "settings": {
       "activity": {
